Add the exploration of high income individuals

--- a/viz_scripts/Program_trip_characteristics.ipynb
+++ b/viz_scripts/Program_trip_characteristics.ipynb
@@ -594,17 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f72a49a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    ".client_os_version.value_counts().plot(kind=\"pie\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14bbe6bf",
+   "id": "f4b32c9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8576056",
+   "id": "8d5b5912",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c52ba851",
+   "id": "2b429646",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d31a96c7",
+   "id": "63cd80ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +636,94 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ca652e1",
+   "id": "caafa0b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "high_income_participants = [...]\n",
+    "uuid_program_df[uuid_program_df.user_id_str.isin(high_income_participants)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6c5a4f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "participant_ct_df[\"start_ts_dt\"] = participant_ct_df.start_ts.apply(lambda st: arrow.get(st))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88bc9d8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "participant_ct_df[participant_ct_df.user_id_str.isin(high_income_participants)].groupby(\"user_id_str\").start_ts_dt.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b66013d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "participant_ct_df[participant_ct_df.user_id_str.isin(high_income_participants)].groupby(\"user_id_str\").start_ts_dt.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "488224cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "participant_ct_df[participant_ct_df.user_id_str.isin(high_income_participants)].groupby('user_id_str').plot(x=\"start_ts_dt\", y=\"distance\", subplots=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ab27575",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "en_survey = pd.read_csv(\"en_survey.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ee76343",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_to_uuid_format(us):\n",
+    "    try:\n",
+    "        return str(UUID(us))\n",
+    "    except ValueError as e:\n",
+    "        return None\n",
+    "    \n",
+    "en_survey[\"user_id_str\"] = en_survey['Unique User ID (auto-filled, do not edit)'].dropna().apply(convert_to_uuid_format)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b9e219d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "en_survey[en_survey.user_id_str.isin(high_income_participants)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c6149e4",
    "metadata": {},
    "outputs": [],
    "source": []
