--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -106,7 +106,7 @@
     "                                                                            study_type,\n",
     "                                                                            dic_re,\n",
     "                                                                            dic_pur=dic_pur)\n",
-    "expanded_ct = scaffolding.add_energy_labels(expanded_ct, df_ei, dic_fuel)"
+    "expanded_ct = scaffolding.add_energy_impact(expanded_ct, df_ei, dic_fuel)"
    ]
   },
   {
