Force the missing plot size to 10x10 + avoid trip_label_count copy/paste
We originally tried to make the figure for the missing subplots depend on the
kind of plot. However, it turns out that non-square figsizes lead to bad
overlaps (https://github.com/e-mission/em-public-dashboard/pull/70#issuecomment-1257124459)

Forcing the size to 10x10 works even when displayed in a rectangular grid tile
https://github.com/e-mission/em-public-dashboard/pull/70#issuecomment-1257121306
which is why we had set all the kind = pie

This means that the parameter is no longer useful, so we remove it all

Finally, we were copy-pasting the equivalent of `trip_label_count` in the < 10
miles metric. We avoid this by moving it outside the function (which
necessitates passing in expanded_ct throughout instead of having it be a
default parameter) and then invoking it from the notebook.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -126,7 +126,7 @@
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
     "    print(expanded_ct['Mode_confirm'].value_counts(dropna=True))\n",
     "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name,\"pie\")\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
@@ -152,7 +152,7 @@
     "    print(expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True))\n",
     "except:\n",
     "    debug_df.loc[\"Commute_trips\"] = len(expanded_ct.query(\"Trip_purpose == 'Work'\")) if \"Trip_purpose\" in expanded_ct.columns else 0\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name,\"pie\")\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
@@ -184,7 +184,7 @@
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)\n",
     "    print(expanded_ct['Trip_purpose'].value_counts(dropna=True))\n",
     "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name,\"pie\")\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
@@ -217,8 +217,8 @@
     "    print(expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True))\n",
     "except:\n",
     "    d10_df = expanded_ct.query(\"distance_miles <= 10\") if \"distance_miles\" in expanded_ct.columns else expanded_ct\n",
-    "    debug_df.loc[\"Trips_less_than_10_miles\"] = len(d10_df[\"Mode_confirm\"].dropna()) if \"Mode_confirm\" in d10_df.columns else 0\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name,\"pie\")\n",
+    "    debug_df.loc[\"Trips_less_than_10_miles\"] = scaffolding.trip_label_count(\"Mode_confirm\", d10_df)\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
@@ -264,7 +264,7 @@
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "    print(miles)\n",
     "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name,\"pie\")\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    "
    ]
   },
@@ -296,7 +296,7 @@
     "    barplot_mode(data,x,y,plot_title,file_name)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title)\n",
     "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name,\"pie\")\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    "
    ]
   },
@@ -332,7 +332,7 @@
     "    barplot_day(data,x,y,plot_title,file_name)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month']), file_name, plot_title)\n",
     "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name,\"pie\")\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    "
    ]
   },
@@ -369,7 +369,7 @@
     "    barplot_day(data,x,y,plot_title,file_name)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday']), file_name, plot_title)\n",
     "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name,\"pie\")\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    "
    ]
   }
