Couple of minor fixes to the plot titles

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -205,7 +205,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_title=\"Mode confirmations for trips under 10 Miles\"\n",
+    "plot_title_no_quality=\"Mode confirmations for trips under 10 Miles\"\n",
     "file_name ='ntrips_under10miles_mode_confirm%s' % file_suffix\n",
     "try:\n",
     "    labels_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
@@ -351,7 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality=\"Number of trips by weekday\\n%s\" % quality_text\n",
+    "plot_title_no_quality=\"Number of trips by weekday\"\n",
     "file_name ='ntrips_per_weekday%s' % file_suffix\n",
     "try:\n",
     "    fq_weekdays = expanded_ct.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
