--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expanded_ct, file_suffix, quality_text = scaffolding.load_viz_notebook_data(year,\n",
+    "expanded_ct, file_suffix, quality_text, debug_df = scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_eb = expanded_ct.query(f\"mode_confirm == '{mode_of_interest}'\")"
+    "data_eb = expanded_ct.query(f\"mode_confirm == '{mode_of_interest}'\") if \"mode_confirm\" in expanded_ct.columns else expanded_ct"
    ]
   },
   {
@@ -148,12 +148,18 @@
    },
    "outputs": [],
    "source": [
-    "labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
-    "values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
-    "plot_title=f\"Number of trips for each purpose for {mode_of_interest} only\\n{quality_text}\"\n",
+    "plot_title_no_quality=f\"Number of trips for each purpose for {mode_of_interest} only\"\n",
     "file_name= f'ntrips_{mode_of_interest}_purpose%s' % file_suffix\n",
-    "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
-    "alt_text = store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)"
+    "\n",
+    "try:\n",
+    "    labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
+    "    values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
+    "    alt_text = store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -163,12 +169,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
-    "values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
-    "plot_title=f\"Number of trips for each replaced transport mode for {mode_of_interest} only\\n{quality_text}\"\n",
+    "plot_title_no_quality=f\"Number of trips for each replaced transport mode for {mode_of_interest} only\"\n",
     "file_name =f'ntrips_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
-    "pie_chart_mode(plot_title,labels_eb,values_eb,file_name)\n",
-    "alt_text = store_alt_text_pie(pd.DataFrame(values_eb, labels_eb), file_name, plot_title)"
+    "\n",
+    "try:\n",
+    "    labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
+    "    values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    pie_chart_mode(plot_title,labels_eb,values_eb,file_name)\n",
+    "    alt_text = store_alt_text_pie(pd.DataFrame(values_eb, labels_eb), file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -186,24 +198,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dg=data_eb.groupby('Replaced_mode').agg({'distance_miles': ['sum', 'count' , 'mean']},)\n",
-    "dg.columns = ['Total (miles)', 'Count' ,'Average (miles)']\n",
-    "dg = dg.reset_index()\n",
-    "dg = dg.sort_values(by=['Total (miles)'], ascending=False)\n",
-    "\n",
-    "dg_dict = dict(zip(dg['Replaced_mode'], dg['Total (miles)']))\n",
-    "labels_m = []\n",
-    "values_m = []\n",
-    "\n",
-    "for x, y in dg_dict.items():\n",
-    "    labels_m.append(x)\n",
-    "    values_m.append(y)\n",
-    "\n",
-    "plot_title=f\"Distribution of Miles Replaced by {mode_of_interest} \\n{quality_text}\"\n",
+    "plot_title_no_quality=f\"Distribution of Miles Replaced by {mode_of_interest}\"\n",
     "file_name =f'miles_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
-    "pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
-    "alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
-    "print(dg)"
+    "\n",
+    "try:\n",
+    "    dg=data_eb.groupby('Replaced_mode').agg({'distance_miles': ['sum', 'count' , 'mean']},)\n",
+    "    dg.columns = ['Total (miles)', 'Count' ,'Average (miles)']\n",
+    "    dg = dg.reset_index()\n",
+    "    dg = dg.sort_values(by=['Total (miles)'], ascending=False)\n",
+    "\n",
+    "    dg_dict = dict(zip(dg['Replaced_mode'], dg['Total (miles)']))\n",
+    "    labels_m = []\n",
+    "    values_m = []\n",
+    "\n",
+    "    for x, y in dg_dict.items():\n",
+    "        labels_m.append(x)\n",
+    "        values_m.append(y)\n",
+    "\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
+    "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
+    "    print(dg)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -221,15 +239,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
-    "x='Replaced_mode'\n",
-    "y='Average (miles)'\n",
-    "y2 = \"Count\"\n",
-    "\n",
-    "plot_title=\"Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\\n%s\" % quality_text\n",
+    "plot_title_no_quality=\"Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\"\n",
     "file_name ='average_miles_replaced_mode%s' % file_suffix\n",
-    "barplot_mode(data,x,y,plot_title,file_name)\n",
-    "alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title)"
+    "\n",
+    "try:\n",
+    "    data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
+    "    x='Replaced_mode'\n",
+    "    y='Average (miles)'\n",
+    "    y2 = \"Count\"\n",
+    "\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    barplot_mode(data,x,y,plot_title,file_name)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -247,19 +271,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fq_days = data_eb.groupby(['start_local_dt_day']).agg({'start_local_dt_day': ['sum', 'count']})\n",
-    "fq_days = fq_days.reset_index()\n",
-    "fq_days.columns = ['Day of the Month', 'Total', 'Number of Trips']\n",
-    "\n",
-    "data = fq_days\n",
-    "x = 'Day of the Month'\n",
-    "y = 'Number of Trips'\n",
-    "\n",
-    "plot_title=f\"Number of {mode_of_interest} trips by day\\n%s\" % quality_text\n",
+    "plot_title_no_quality=f\"Number of {mode_of_interest} trips by day\\n%s\" % quality_text\n",
     "file_name =f'ntrips_{mode_of_interest}_per_day%s' % file_suffix\n",
     "\n",
-    "barplot_day(data,x,y,plot_title,file_name)\n",
-    "alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month'].values), file_name, plot_title)"
+    "\n",
+    "try:\n",
+    "    fq_days = data_eb.groupby(['start_local_dt_day']).agg({'start_local_dt_day': ['sum', 'count']})\n",
+    "    fq_days = fq_days.reset_index()\n",
+    "    fq_days.columns = ['Day of the Month', 'Total', 'Number of Trips']\n",
+    "\n",
+    "    data = fq_days\n",
+    "    x = 'Day of the Month'\n",
+    "    y = 'Number of Trips'\n",
+    "\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    barplot_day(data,x,y,plot_title,file_name)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month'].values), file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -279,27 +309,32 @@
    },
    "outputs": [],
    "source": [
-    "fq_weekdays = data_eb.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
-    "fq_weekdays = fq_weekdays.reset_index()\n",
-    "fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
-    "weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
-    "fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
-    "\n",
-    "data = fq_weekdays\n",
-    "x = 'Weekday'\n",
-    "y = 'Number of Trips'\n",
-    "\n",
-    "plot_title=f\"Number of {mode_of_interest} trips by weekday\\n%s\" % quality_text\n",
+    "plot_title_no_quality=f\"Number of {mode_of_interest} trips by weekday\"\n",
     "file_name =f'ntrips_{mode_of_interest}_per_weekday%s' % file_suffix\n",
     "\n",
-    "barplot_day(data,x,y,plot_title,file_name)\n",
-    "alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday'].values), file_name, plot_title)"
+    "try:\n",
+    "    fq_weekdays = data_eb.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
+    "    fq_weekdays = fq_weekdays.reset_index()\n",
+    "    fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
+    "    weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
+    "    fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
+    "\n",
+    "    data = fq_weekdays\n",
+    "    x = 'Weekday'\n",
+    "    y = 'Number of Trips'\n",
+    "\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    barplot_day(data,x,y,plot_title,file_name)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday'].values), file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -313,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
