--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -80,12 +80,12 @@
    },
    "outputs": [],
    "source": [
-    "expanded_ct, file_suffix, quality_text = scaffolding.load_viz_notebook_data(year,\n",
+    "expanded_ct, file_suffix, quality_text, debug_df = scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
     "                                                                            dic_re)\n",
-    "expanded_ct = scaffolding.add_energy_labels(expanded_ct, df_ei, dic_fuel)"
+    "expanded_ct = scaffolding.add_energy_labels(expanded_ct, df_ei, dic_fuel) if \"mode_confirm\" in expanded_ct.columns else expanded_ct"
    ]
   },
   {
@@ -102,15 +102,26 @@
    "outputs": [],
    "source": [
     "# Get timestamp from known year/month/day aggregated to days\n",
-    "data = expanded_ct[['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_lb_CO2','distance_miles']].copy()\n",
-    "data.rename(columns={'start_local_dt_year':'year','start_local_dt_month':'month','start_local_dt_day':'day'}, inplace=True)\n",
-    "data['date_time'] = pd.to_datetime(data[['year','month','day']])\n",
-    "data = data.drop(columns=['year','month','day'])\n",
+    "sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance_miles']\n",
+    "sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_lb_CO2']\n",
+    "if len(expanded_ct) == 0:\n",
+    "    data = expanded_ct.copy()\n",
+    "elif \"Mode_confirm\" not in expanded_ct.columns:\n",
+    "    data = expanded_ct[sel_cols_no_label_dep].copy()\n",
+    "else:\n",
+    "    data = expanded_ct[sel_cols_with_label_dep].copy()\n",
+    "    \n",
+    "if len(expanded_ct) > 0:\n",
+    "    data.rename(columns={'start_local_dt_year':'year','start_local_dt_month':'month','start_local_dt_day':'day'}, inplace=True)\n",
+    "    data['date_time'] = pd.to_datetime(data[['year','month','day']])\n",
+    "    data = data.drop(columns=['year','month','day'])\n",
     "\n",
-    "# Categorical type will include all days/modes in groupby even if there is no data for a particular tabulation\n",
-    "data.user_id = pd.Categorical(data.user_id)\n",
-    "data.date_time = pd.Categorical(data.date_time)\n",
-    "data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
+    "    # Categorical type will include all days/modes in groupby even if there is no data for a particular tabulation\n",
+    "    data.user_id = pd.Categorical(data.user_id)\n",
+    "    data.date_time = pd.Categorical(data.date_time)\n",
+    "    \n",
+    "    if \"Mode_confirm\" in expanded_ct.columns:\n",
+    "        data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
     "\n",
     "data.head()"
    ]
@@ -123,34 +134,36 @@
    },
    "outputs": [],
    "source": [
-    "# Count the number of trips for each confirmed mode\n",
-    "mode_counts = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False).size()\n",
-    "mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
+    "if len(expanded_ct) > 0:\n",
+    "    # Get the count of unique users that were active on each given date\n",
+    "    active_users = pd.DataFrame(data.groupby(['date_time'], as_index=False)['user_id'].nunique())\n",
+    "    active_users.rename(columns={'user_id':'active_users'}, inplace=True)\n",
     "\n",
-    "# Sum daily distance traveled for each mode\n",
-    "mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[['distance_miles']].sum()\n",
-    "mode_distance.rename(columns={'sum':'distance_miles'}, inplace=True)\n",
-    "mode_distance['distance_miles'] = mode_distance['distance_miles'].fillna(0)\n",
+    "    if \"Mode_confirm\" in expanded_ct.columns:\n",
+    "        # Count the number of trips for each confirmed mode\n",
+    "        mode_counts = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False).size()\n",
+    "        mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
     "\n",
-    "# Sum daily emissions for each user\n",
-    "emissions = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_lb_CO2', 'distance_miles']].sum()\n",
-    "emissions['Mode_confirm_lb_CO2'] = emissions['Mode_confirm_lb_CO2'].fillna(0)\n",
-    "emissions['distance_miles'] = emissions['Mode_confirm_lb_CO2'].fillna(0)\n",
+    "        # Sum daily distance traveled for each mode\n",
+    "        mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[['distance_miles']].sum()\n",
+    "        mode_distance.rename(columns={'sum':'distance_miles'}, inplace=True)\n",
+    "        mode_distance['distance_miles'] = mode_distance['distance_miles'].fillna(0)\n",
     "\n",
-    "# Sum daily energy for each user\n",
-    "energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', 'distance_miles']].sum()\n",
-    "energy['Mode_confirm_EI(kWH)'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
-    "energy['distance_miles'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
+    "        # Sum daily emissions for each user\n",
+    "        emissions = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_lb_CO2', 'distance_miles']].sum()\n",
+    "        emissions['Mode_confirm_lb_CO2'] = emissions['Mode_confirm_lb_CO2'].fillna(0)\n",
+    "        emissions['distance_miles'] = emissions['Mode_confirm_lb_CO2'].fillna(0)\n",
     "\n",
-    "# Get the count of unique users that were active on each given date\n",
-    "active_users = pd.DataFrame(data.groupby(['date_time'], as_index=False)['user_id'].nunique())\n",
-    "active_users.rename(columns={'user_id':'active_users'}, inplace=True)\n",
+    "        # Sum daily energy for each user\n",
+    "        energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', 'distance_miles']].sum()\n",
+    "        energy['Mode_confirm_EI(kWH)'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
+    "        energy['distance_miles'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
     "\n",
-    "# Add 7-day rolling avg smoothing to better see trends\n",
-    "mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "mode_distance['distance_miles_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "emissions['distance_miles_smooth'] = emissions.groupby(['user_id'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "energy['distance_miles_smooth'] = energy.groupby(['user_id'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())"
+    "        # Add 7-day rolling avg smoothing to better see trends\n",
+    "        mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "        mode_distance['distance_miles_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "        emissions['distance_miles_smooth'] = emissions.groupby(['user_id'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "        energy['distance_miles_smooth'] = energy.groupby(['user_id'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())"
    ]
   },
   {
@@ -173,16 +186,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Emissions per week across all users (net impact)\n",
-    "plot_data = emissions.groupby(['date_time'], as_index=False)['Mode_confirm_lb_CO2'].agg(['sum'])\n",
-    "plot_data = plot_data.merge(active_users, on='date_time')\n",
-    "plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
-    "\n",
-    "plot_title = 'Net Daily Emissions (All Users, excluding air)\\n%s'%quality_text\n",
-    "ylab = 'Emissions (lb CO2/day/user)'\n",
+    "plot_title_no_quality = 'Net Daily Emissions (All Users, excluding air)'\n",
     "file_name = \"ts_emissions_user%s\"%file_suffix\n",
-    "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
-    "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
+    "\n",
+    "try:\n",
+    "    # Emissions per week across all users (net impact)\n",
+    "    plot_data = emissions.groupby(['date_time'], as_index=False)['Mode_confirm_lb_CO2'].agg(['sum'])\n",
+    "    plot_data = plot_data.merge(active_users, on='date_time')\n",
+    "    plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
+    "\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    ylab = 'Emissions (lb CO2/day/user)'\n",
+    "    timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
+    "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -198,16 +217,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Energy per week across all users (net impact)\n",
-    "plot_data = energy.groupby(['date_time'], as_index=False)['Mode_confirm_EI(kWH)'].agg(['sum'])\n",
-    "plot_data = plot_data.merge(active_users, on='date_time')\n",
-    "plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
-    "\n",
-    "plot_title = 'Net Daily Energy (All Users, excluding air)\\n%s'%quality_text\n",
-    "ylab = 'Energy (kWH/day/user)'\n",
+    "plot_title_no_quality = 'Net Daily Energy (All Users, excluding air)'\n",
     "file_name = \"ts_energy_user%s\"%file_suffix\n",
-    "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
-    "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
+    "\n",
+    "try:\n",
+    "    # Energy per week across all users (net impact)\n",
+    "    plot_data = energy.groupby(['date_time'], as_index=False)['Mode_confirm_EI(kWH)'].agg(['sum'])\n",
+    "    plot_data = plot_data.merge(active_users, on='date_time')\n",
+    "    plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
+    "\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    ylab = 'Energy (kWH/day/user)'\n",
+    "    timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
+    "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -223,17 +248,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Emissions per mile per day across all users (travel efficiency)\n",
-    "# Note that the energy plot will be identical to this one since scale factor is divided out\n",
-    "emissions['CO2_per_mile'] = emissions['Mode_confirm_lb_CO2'] / emissions['distance_miles_smooth']\n",
-    "emissions['CO2_per_mile'] = emissions['CO2_per_mile'].fillna(0)\n",
-    "plot_data = emissions.groupby(['date_time'])['CO2_per_mile'].agg(['mean']).reset_index()\n",
-    "\n",
-    "plot_title = 'Average Daily Emission Rate (All Users, excluding air)\\n%s'%quality_text\n",
-    "ylab = 'Emissions (lb CO2/mile/day)'\n",
+    "plot_title_no_quality = 'Average Daily Emission Rate (All Users, excluding air)'\n",
     "file_name = \"ts_emissions_vmt%s\"%file_suffix\n",
-    "timeseries_plot(plot_data['date_time'], plot_data['mean'], plot_title, ylab, file_name)\n",
-    "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
+    "\n",
+    "try:\n",
+    "    # Emissions per mile per day across all users (travel efficiency)\n",
+    "    # Note that the energy plot will be identical to this one since scale factor is divided out\n",
+    "    emissions['CO2_per_mile'] = emissions['Mode_confirm_lb_CO2'] / emissions['distance_miles_smooth']\n",
+    "    emissions['CO2_per_mile'] = emissions['CO2_per_mile'].fillna(0)\n",
+    "    plot_data = emissions.groupby(['date_time'])['CO2_per_mile'].agg(['mean']).reset_index()\n",
+    "\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    ylab = 'Emissions (lb CO2/mile/day)'\n",
+    "    timeseries_plot(plot_data['date_time'], plot_data['mean'], plot_title, ylab, file_name)\n",
+    "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality) "
    ]
   },
   {
@@ -249,14 +280,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot of active users\n",
-    "plot_data = active_users\n",
-    "\n",
-    "plot_title = 'Number of Active Users\\n%s'%quality_text\n",
-    "ylab = 'Unique IDs'\n",
+    "plot_title_no_quality = 'Number of Active Users\\n%s'%quality_text\n",
     "file_name = \"ts_users%s\"%file_suffix\n",
-    "timeseries_plot(plot_data['date_time'], plot_data['active_users'], plot_title, ylab, file_name)\n",
-    "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
+    "\n",
+    "try:\n",
+    "    # Plot of active users\n",
+    "    plot_data = active_users\n",
+    "\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    ylab = 'Unique IDs'\n",
+    "    timeseries_plot(plot_data['date_time'], plot_data['active_users'], plot_title, ylab, file_name)\n",
+    "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality) "
    ]
   },
   {
@@ -272,40 +309,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot of mode share proportions across all users\n",
-    "# Consolidate modes\n",
-    "plot_data = mode_counts.replace('Bikeshare', 'Shared Micromobility')\n",
-    "plot_data = plot_data.replace('Scooter share', 'Shared Micromobility')\n",
-    "plot_data = plot_data.replace('Regular Bike', 'Personal Micromobility')\n",
-    "plot_data = plot_data.replace('Skate board', 'Personal Micromobility')\n",
-    "plot_data = plot_data.replace('Train', 'Transit')\n",
-    "plot_data = plot_data.replace('Free Shuttle', 'Transit')\n",
-    "plot_data = plot_data.replace('Bus', 'Transit')\n",
-    "plot_data = plot_data.replace('Walk', 'Walk')\n",
-    "plot_data = plot_data.replace('Taxi/Uber/Lyft', 'Ridehail')\n",
-    "plot_data = plot_data.replace('Pilot ebike', 'E-Bike')\n",
-    "\n",
-    "plot_data = plot_data.groupby(['date_time','Mode_confirm'], as_index=False)['trip_count_smooth'].sum()\n",
-    "total_trips = plot_data.groupby(['date_time'], as_index=False).sum()\n",
-    "plot_data = plot_data.merge(total_trips, on='date_time')\n",
-    "plot_data['trip_proportion'] = plot_data['trip_count_smooth_x'] / plot_data['trip_count_smooth_y']\n",
-    "\n",
-    "# Re-establish categorical variable to not include Other and Non-trips\n",
-    "plot_data = plot_data[~plot_data['Mode_confirm'].isin(['Not a Trip','Other'])]\n",
-    "plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
-    "\n",
-    "plot_title = 'Daily Aggregate Mode Share (excluding \"Other\" and \"Not a trip\"\\n%s'%quality_text\n",
-    "ylab = 'Proportion of All Trips'\n",
-    "legend_title = 'Confirmed Mode'\n",
+    "plot_title_no_quality = 'Daily Aggregate Mode Share (excluding \"Other\" and \"Not a trip\"'\n",
     "file_name = \"ts_all_modes%s\"%file_suffix\n",
-    "timeseries_multi_plot(plot_data, 'date_time','trip_proportion','Mode_confirm', plot_title, ylab, legend_title, file_name)\n",
-    "alt_text = store_alt_text_generic('multivariate timeseries', file_name, plot_title)"
+    "\n",
+    "try:\n",
+    "    # Plot of mode share proportions across all users\n",
+    "    # Consolidate modes\n",
+    "    plot_data = mode_counts.replace('Bikeshare', 'Shared Micromobility')\n",
+    "    plot_data = plot_data.replace('Scooter share', 'Shared Micromobility')\n",
+    "    plot_data = plot_data.replace('Regular Bike', 'Personal Micromobility')\n",
+    "    plot_data = plot_data.replace('Skate board', 'Personal Micromobility')\n",
+    "    plot_data = plot_data.replace('Train', 'Transit')\n",
+    "    plot_data = plot_data.replace('Free Shuttle', 'Transit')\n",
+    "    plot_data = plot_data.replace('Bus', 'Transit')\n",
+    "    plot_data = plot_data.replace('Walk', 'Walk')\n",
+    "    plot_data = plot_data.replace('Taxi/Uber/Lyft', 'Ridehail')\n",
+    "    plot_data = plot_data.replace('Pilot ebike', 'E-Bike')\n",
+    "\n",
+    "    plot_data = plot_data.groupby(['date_time','Mode_confirm'], as_index=False)['trip_count_smooth'].sum()\n",
+    "    total_trips = plot_data.groupby(['date_time'], as_index=False).sum()\n",
+    "    plot_data = plot_data.merge(total_trips, on='date_time')\n",
+    "    plot_data['trip_proportion'] = plot_data['trip_count_smooth_x'] / plot_data['trip_count_smooth_y']\n",
+    "\n",
+    "    # Re-establish categorical variable to not include Other and Non-trips\n",
+    "    plot_data = plot_data[~plot_data['Mode_confirm'].isin(['Not a Trip','Other'])]\n",
+    "    plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
+    "\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    ylab = 'Proportion of All Trips'\n",
+    "    legend_title = 'Confirmed Mode'\n",
+    "    timeseries_multi_plot(plot_data, 'date_time','trip_proportion','Mode_confirm', plot_title, ylab, legend_title, file_name)\n",
+    "    alt_text = store_alt_text_generic('multivariate timeseries', file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality) "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -319,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
