--- a/viz_scripts/variation_across_individuals.ipynb
+++ b/viz_scripts/variation_across_individuals.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "32b25c19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is still exploratory analysis, so it is not converted to work with the cold start changes\n",
+    "# similar to the other notebooks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "lyric-montgomery",
    "metadata": {},
    "outputs": [],
@@ -230,7 +241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -244,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
