Move the `debug_df` for the mode specific metrics from scaffolding to the mode specific notebooks
Since we don't have the `mode_of_interest` available in scaffolding

Testing done:
- when `mode_of_interest` was set to `e-bike` and the notebook run against the
  CanBikeCO data, it ran through with the appropriate errors
- when we changed the mode of interest to `pilot_ebike`, the correct values
  were generated. The "last updated" is a bit wonky on the bar graph, but I'm
  not going to fiddle with it now

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -104,6 +104,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77eedae6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'mode_confirm' in expanded_ct.columns:\n",
+    "    mode_of_interest_df = expanded_ct.query(f\"mode_confirm == '{mode_of_interest}'\")\n",
+    "    debug_df.loc[f\"{mode_of_interest}_trips\"] = len(mode_of_interest_df)\n",
+    "    debug_df.loc[f\"{mode_of_interest}_trips_with_replaced_mode\"] = scaffolding.trip_label_count(\"Replaced_mode\", mode_of_interest_df)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "surgical-continuity",
    "metadata": {},
