Get the mode specific timeseries to also work when there are and there are not trips with the mode of interest
Changes:
- add the number of trips to the debug_df
- remove the categorical mapping before we filter out the mode and distances of interest
  (fix for apparent regression https://github.com/e-mission/em-public-dashboard/issues/69#issuecomment-1257237104)
- Because we don't generate any pie charts, and we group by the date and calculate the mean,
    we have zero entries rather than errors when there are no mode of interest trips.
- we can leave them as zero, which is not incorrect, but we might want to highlight that they don't exist
    so we check for the length and throw a runtime exception so that the
    "cannot generate" code path gets triggered

Testing done:
https://github.com/e-mission/em-public-dashboard/pull/70#issuecomment-1257241173

--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -97,6 +97,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'mode_confirm' in expanded_ct.columns:\n",
+    "    mode_of_interest_df = expanded_ct.query(f\"mode_confirm == '{mode_of_interest}'\")\n",
+    "    debug_df.loc[f\"{mode_of_interest}_trips\"] = len(mode_of_interest_df)\n",
+    "    debug_df.loc[f\"{mode_of_interest}_trips_with_replaced_mode\"] = scaffolding.trip_label_count(\"Replaced_mode\", mode_of_interest_df)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -111,10 +123,10 @@
    "source": [
     "# Get timestamp from known year/month/day aggregated to days\n",
     "sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance_miles']\n",
-    "sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_lb_CO2']\n",
+    "sel_cols_with_label_dep = sel_cols_no_label_dep + ['mode_confirm']\n",
     "if len(expanded_ct) == 0:\n",
     "    data = expanded_ct.copy()\n",
-    "elif \"Mode_confirm\" not in expanded_ct.columns:\n",
+    "elif \"mode_confirm\" not in expanded_ct.columns:\n",
     "    data = expanded_ct[sel_cols_no_label_dep].copy()\n",
     "else:\n",
     "    data = expanded_ct[sel_cols_with_label_dep].copy()\n",
@@ -128,9 +140,6 @@
     "    data.user_id = pd.Categorical(data.user_id)\n",
     "    data.date_time = pd.Categorical(data.date_time)\n",
     "    \n",
-    "    if \"Mode_confirm\" in expanded_ct.columns:\n",
-    "        data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
-    "\n",
     "data.head()"
    ]
   },
@@ -161,6 +170,7 @@
     "        mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
     "        mode_distance['distance_miles_smooth'] = mode_distance.groupby(['user_id','mode_confirm'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
     "        \n",
+    "        # This is the mode specific part\n",
     "        mode_counts_interest = mode_counts[mode_counts['mode_confirm']==mode_of_interest].copy()\n",
     "        mode_distance_interest = mode_distance[mode_distance['mode_confirm']==mode_of_interest].copy()\n",
     "        \n",
@@ -195,6 +205,9 @@
     "file_name = f\"ts_{mode_of_interest}_share%s\"%file_suffix\n",
     "\n",
     "try:\n",
+    "    if len(mode_counts_interest) == 0:\n",
+    "        # force error generation so that we will go into the \"missing\" data code path\n",
+    "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
     "    plot_data = mode_counts_interest.groupby(['date_time'])['trip_count_smooth'].agg(['sum']).reset_index()\n",
     "    \n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
@@ -225,6 +238,10 @@
     "file_name = f\"ts_{mode_of_interest}_miles%s\"%file_suffix\n",
     "\n",
     "try:\n",
+    "    if len(mode_counts_interest) == 0:\n",
+    "        # force error generation so that we will go into the \"missing\" data code path\n",
+    "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
+    "\n",
     "    plot_data = mode_distance_interest.groupby(['date_time'])['distance_miles'].agg(['sum']).reset_index()\n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
@@ -255,6 +272,10 @@
     "file_name = f\"ts_{mode_of_interest}_miles_user%s\"%file_suffix\n",
     "\n",
     "try:\n",
+    "    if len(mode_counts_interest) == 0:\n",
+    "        # force error generation so that we will go into the \"missing\" data code path\n",
+    "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
+    "\n",
     "    plot_data = mode_distance_interest.groupby(['date_time'])['distance_miles'].agg(['sum']).reset_index()\n",
     "    plot_data = plot_data.merge(active_users, on='date_time')\n",
     "    plot_data['mileage_per_user'] = plot_data['sum'] / plot_data['active_users']\n",
@@ -287,6 +308,10 @@
     "file_name = f\"ts_{mode_of_interest}_miles_proportion%s\"%file_suffix\n",
     "\n",
     "try:\n",
+    "    if len(mode_counts_interest) == 0:\n",
+    "        # force error generation so that we will go into the \"missing\" data code path\n",
+    "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
+    "\n",
     "    plot_data = mode_distance_interest.groupby(['date_time'], as_index=False)['distance_miles_smooth'].sum()\n",
     "    total_miles = mode_distance.groupby(['date_time'], as_index=False)['distance_miles_smooth'].sum()\n",
     "    plot_data = plot_data.merge(total_miles, on=['date_time'])\n",
@@ -320,6 +345,10 @@
     "file_name = f\"ts_{mode_of_interest}_trips_proportion%s\"%file_suffix\n",
     "\n",
     "try:\n",
+    "    if len(mode_counts_interest) == 0:\n",
+    "        # force error generation so that we will go into the \"missing\" data code path\n",
+    "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
+    "\n",
     "    plot_data = mode_counts.groupby(['date_time','mode_confirm'], as_index=False)['trip_count_smooth'].sum()\n",
     "    total_trips = plot_data.groupby(['date_time'], as_index=False).sum()\n",
     "    plot_data = plot_data.merge(total_trips, on='date_time')\n",
@@ -361,6 +390,10 @@
     "file_name = f\"ts_{mode_of_interest}_trip_individual_variation%s\"%file_suffix\n",
     "\n",
     "try:\n",
+    "    if len(mode_counts_interest) == 0:\n",
+    "        # force error generation so that we will go into the \"missing\" data code path\n",
+    "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
+    "\n",
     "    plot_data_mode = mode_counts_interest.groupby(['date_time', 'user_id'], as_index=False)[\"trip_count_smooth\"].sum()\n",
     "    plot_data = mode_counts.groupby(['date_time','user_id'], as_index=False)['trip_count_smooth'].sum()\n",
     "    plot_data = plot_data.merge(plot_data_mode, on=['date_time', 'user_id'])\n",
@@ -401,6 +434,10 @@
     "file_name = f\"ts_{mode_of_interest}_mile_individual_variation%s\"%file_suffix\n",
     "\n",
     "try:\n",
+    "    if len(mode_distance_interest) == 0:\n",
+    "        # force error generation so that we will go into the \"missing\" data code path\n",
+    "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
+    "\n",
     "    plot_data_mode = mode_distance_interest.groupby(['date_time', 'user_id'], as_index=False)[\"distance_miles_smooth\"].sum()\n",
     "    plot_data = mode_distance.groupby(['date_time','user_id'], as_index=False)['distance_miles_smooth'].sum()\n",
     "    plot_data = plot_data.merge(plot_data_mode, on=['date_time', 'user_id'])\n",
