Get the energy calculations to also work when there are and there are not trips with the mode of interest
Similar to 8f3b497f2978e51e1cf71f51fcef9576999e7dfc

Changes:
- add the number of trips to the debug_df
- Because we don't generate any pie charts, and we group by the date and calculate the mean,
    we have zero entries rather than errors when there are no mode of interest trips.
- we can leave them as zero, which is not incorrect, but we might want to highlight that they don't exist
    so we check for the length and throw a runtime exception so that the
    "cannot generate" code path gets triggered

Also added the "Last modified" text to the energy and emission plots, similar to cd7f1304d6da01e57b5ee21c23697ad7a3987163

Testing done:
https://github.com/e-mission/em-public-dashboard/pull/71#issuecomment-1257244476

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -111,6 +111,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7ed6ba7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'mode_confirm' in expanded_ct.columns:\n",
+    "    mode_of_interest_df = expanded_ct.query(f\"mode_confirm == '{mode_of_interest}'\")\n",
+    "    debug_df.loc[f\"{mode_of_interest}_trips\"] = len(mode_of_interest_df)\n",
+    "    debug_df.loc[f\"{mode_of_interest}_trips_with_replaced_mode\"] = scaffolding.trip_label_count(\"Replaced_mode\", mode_of_interest_df)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "caring-aruba",
    "metadata": {},
@@ -161,6 +174,10 @@
     "file_name =f'sketch_energy_impact_{mode_of_interest}%s' % file_suffix\n",
     "    \n",
     "try:\n",
+    "    if len(data_eb) == 0:\n",
+    "        # force error generation so that we will go into the \"missing\" data code path\n",
+    "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
+    "\n",
     "    ebei=data_eb.groupby('Replaced_mode').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
     "    ebei.columns = ['Sketch of Total Energy_Impact(kWH)', 'Sketch of Average Energy_Impact(kWH)']\n",
     "    ebei= ebei.reset_index()\n",
@@ -199,6 +216,10 @@
     "file_name =f'sketch_CO2impact_{mode_of_interest}%s' % file_suffix\n",
     "\n",
     "try:\n",
+    "    if len(data_eb) == 0:\n",
+    "        # force error generation so that we will go into the \"missing\" data code path\n",
+    "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
+    "        \n",
     "    ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(lb)': ['sum', 'mean']},)\n",
     "    ebco2.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
     "    ebco2 = ebco2.reset_index()\n",
@@ -213,7 +234,9 @@
     "    plot_title= plot_title_no_quality+f\"\\n Contribution by replaced mode towards a total of {net_CO2_emissions}(lb CO2 Emissions )\\n\"+quality_text\n",
     "    CO2_impact(x,y,color,plot_title,file_name)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)\n",
-    "except:\n",
+    "except Exception as e:\n",
+    "    import logging\n",
+    "    logging.exception(e)\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
