--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7ed6ba7",
+   "id": "625872b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,20 +234,10 @@
     "    plot_title= plot_title_no_quality+f\"\\n Contribution by replaced mode towards a total of {net_CO2_emissions}(lb CO2 Emissions )\\n\"+quality_text\n",
     "    CO2_impact(x,y,color,plot_title,file_name)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)\n",
-    "except Exception as e:\n",
-    "    import logging\n",
-    "    logging.exception(e)\n",
+    "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa56c2d0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
