--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -165,6 +165,10 @@
     "file_name= f'ntrips_{mode_of_interest}_purpose%s' % file_suffix\n",
     "\n",
     "try:\n",
+    "    if len(data_eb) == 0:\n",
+    "        # force error generation so that we will go into the \"missing\" data code path\n",
+    "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
+    "\n",
     "    labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "    values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
@@ -186,6 +190,10 @@
     "file_name =f'ntrips_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
+    "    if len(data_eb) == 0:\n",
+    "        # force error generation so that we will go into the \"missing\" data code path\n",
+    "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
+    "\n",
     "    labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
     "    values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
@@ -215,6 +223,10 @@
     "file_name =f'miles_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
+    "    if len(data_eb) == 0:\n",
+    "        # force error generation so that we will go into the \"missing\" data code path\n",
+    "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
+    "\n",
     "    dg=data_eb.groupby('Replaced_mode').agg({'distance_miles': ['sum', 'count' , 'mean']},)\n",
     "    dg.columns = ['Total (miles)', 'Count' ,'Average (miles)']\n",
     "    dg = dg.reset_index()\n",
@@ -256,6 +268,10 @@
     "file_name ='average_miles_replaced_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
+    "    if len(data_eb) == 0:\n",
+    "        # force error generation so that we will go into the \"missing\" data code path\n",
+    "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
+    "\n",
     "    data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
     "    x='Replaced_mode'\n",
     "    y='Average (miles)'\n",
@@ -289,6 +305,10 @@
     "\n",
     "\n",
     "try:\n",
+    "    if len(data_eb) == 0:\n",
+    "        # force error generation so that we will go into the \"missing\" data code path\n",
+    "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
+    "\n",
     "    fq_days = data_eb.groupby(['start_local_dt_day']).agg({'start_local_dt_day': ['sum', 'count']})\n",
     "    fq_days = fq_days.reset_index()\n",
     "    fq_days.columns = ['Day of the Month', 'Total', 'Number of Trips']\n",
@@ -326,6 +346,10 @@
     "file_name =f'ntrips_{mode_of_interest}_per_weekday%s' % file_suffix\n",
     "\n",
     "try:\n",
+    "    if len(data_eb) == 0:\n",
+    "        # force error generation so that we will go into the \"missing\" data code path\n",
+    "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
+    "\n",
     "    fq_weekdays = data_eb.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
     "    fq_weekdays = fq_weekdays.reset_index()\n",
     "    fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
