Stop displaying backtraces in the case of an expected exception
This fixes the multiple ugly backtraces in the AWS logs
https://github.com/e-mission/em-public-dashboard/issues/69#issuecomment-1257301755
and is based on https://pyquestions.com/how-do-i-suppress-tracebacks-in-jupyter

--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -57,6 +57,8 @@
    "source": [
     "# Do not run this notebook at all unless it is for a program; nbclient will run up through this cell\n",
     "if study_type != \"program\":\n",
+    "    ipython = get_ipython()\n",
+    "    ipython._showtraceback = scaffolding.no_traceback_handler\n",
     "    raise Exception(\"The plots in this notebook are only relevant to programs\")"
    ]
   },
